add Seeding Round Scores to poster endpoint

--- a/templates/euchmgr.html
+++ b/templates/euchmgr.html
@@ -374,8 +374,8 @@
             <button class="submit" value="fake_seed_results"}}">Generate Fake Results</button>
             <button class="submit" value="tabulate_seed_results"}}">Tabulate Results</button>
             <span class="lnk_lbl">Print (poster):</span>
-            <a href="#" onclick="window.open('/poster/sd_bracket/{{tourn.name}}', '_blank')"">Seeding Bracket</a>
-            <a href="#" onclick="window.open('/poster/sd_scores/{{tourn.name}}', '_blank')"">Seeding Scores</a>
+            <a href="#" onclick="window.open('/poster/sd_bracket/{{tourn.name}}', '_blank')"">Seeding Round Bracket</a>
+            <a href="#" onclick="window.open('/poster/sd_scores/{{tourn.name}}', '_blank')"">Seeding Round Scores</a>
           </form>
         </div>
       </div>
